# 3d-model-viewer

./: CMakeLists.txt  Makefile  main.cpp  mainpage.dox  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_widget.cpp  settings_widget.h  viewer_widget.cpp  viewer_widget.h
dependencies/: CMakeLists.txt
viewer_graph_lib/: CMakeLists.txt
viewer_graph_lib/include/: model.h  parser.h  settings_handler.h  transf_matrix_generator.h  vector.h  vertex_processor.h  viewer_blas.h
viewer_graph_lib/src/: model.c  parser.c  settings_handler.c  transf_matrix_generator.c  vector.c  viewer_blas.c
viewer_graph_lib/test/: test.c
